--- a/password-man/package.json
+++ b/password-man/package.json
@@ -3,11 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.8.1",
+    "@material-ui/icons": "^3.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-password-mask": "^3.3.1",
-    "react-scripts": "2.1.2",
-    "semantic-ui-react": "^0.84.0"
+    "react-scripts": "2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
